# xsconsole

./: .pre-commit-config.yaml  .pylintrc  .travis.yml  GenerateXSConsoleLangErrors.rb  GenerateXSConsoleLangFriendlyNames.rb  INSTALL  MaintenanceReadme.txt  Makefile  README.md  XSConsole.py  XSConsoleAuth.py  XSConsoleBases.py  XSConsoleConfig.py  XSConsoleConstants.py  XSConsoleCurses.py  XSConsoleData.py  XSConsoleDataUtils.py  XSConsoleDialogueBases.py  XSConsoleDialoguePane.py  XSConsoleFields.py  XSConsoleHotData.py  XSConsoleImporter.py  XSConsoleKeymaps.py  XSConsoleLang.py  XSConsoleLangFriendlyNames.py  XSConsoleLangworked.py  XSConsoleLayout.py  XSConsoleLog.py  XSConsoleMenus.py  XSConsoleMetrics.py  XSConsoleRemoteTest.py  XSConsoleRootDialogue.py  XSConsoleStandard.py  XSConsoleState.py  XSConsoleTask.py  XSConsoleTerm.py  XSConsoleUtils.py  pylint.rc  pyproject.toml  requirements.txt  (+4 more)
.github/workflows/: main.yml
plugins-base/: XSFeatureAutoMode.py  XSFeatureChangePassword.py  XSFeatureChangeTimeout.py  XSFeatureCrashDumpSR.py  XSFeatureDMV.py  XSFeatureDNS.py  XSFeatureDRBackup.py  XSFeatureDRRestore.py  XSFeatureDRSchedule.py  XSFeatureDisplayNICs.py  XSFeatureEULA.py  XSFeatureFullVersion.py  XSFeatureHostCommon.py  XSFeatureHostEvacuate.py  XSFeatureHostInfo.py  XSFeatureInterface.py  XSFeatureKeyboard.py  XSFeatureLocalShell.py  XSFeatureLogInOut.py  XSFeatureNTP.py  XSFeatureNetworkReset.py  XSFeaturePoolEject.py  XSFeaturePoolJoin.py  XSFeaturePoolNewMaster.py  XSFeatureQuit.py  XSFeatureReboot.py  XSFeatureRemoteShell.py  XSFeatureSRCommon.py  XSFeatureSRCreate.py  XSFeatureSRInfo.py  XSFeatureSaveBugReport.py  XSFeatureShutdown.py  XSFeatureStatus.py  XSFeatureSuspendSR.py  XSFeatureSyslog.py  XSFeatureSystem.py  XSFeatureTestNetwork.py  XSFeatureTimezone.py  XSFeatureUploadBugReport.py  XSFeatureVMCommon.py  (+4 more)
plugins-oem/: XSFeatureClaimSR.py  XSFeatureLicenseNag.py  XSFeatureManagementHelp.py  XSFeatureOEMBackup.py  XSFeatureOEMRestore.py  XSFeatureOEMRestore.py.bak  XSFeatureReset.py  XSFeatureReset.py.bak  XSFeatureUpdate.py  XSFeatureVerboseBoot.py  XSFeatureVerboseBoot.py.bak  XSMenuOEMLayout.py
tests/: test_auth.py  test_convert_anything_to_str.py  test_data.py  test_utils.py
